# PhyberEngine

./: .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/include/phyber/: common_2d.h  event.h  logging.h  math.h  math.h.complex  renderer_2d.h
engine/include/phyber/2d/: common.h  renderer.h
engine/include/phyber/defs/: global_defines.h
engine/include/phyber/utils/: datatypes.h  defs.h
engine/shaders/: simple.frag.spv
engine/shaders/simple/: simple.frag.msl  simple.vert.msl  simple.vert.spv
engine/src/: common_2d.cpp  event.cpp  logging.cpp  math.cpp  renderer_2d.cpp
engine/src/2d/: common.cpp  renderer.cpp
engine/tests/: datatype_tests.cpp  event_tests.cpp  logging_tests.cpp  math_tests.cpp  math_tests.cpp.complex  renderer_2d_cpu_tests.cpp  renderer_2d_tests.cpp  sdl_test.cpp  sdl_test_buffer.cpp  sdl_test_events.cpp  sdl_test_triangle.cpp
game/: CMakeLists.txt  main.cpp
